force-app/main/default/objects/Fitur_QA__mdt/Fitur_QA__mdt.object-meta.xml
<CustomObject>
    <label>Fitur QA</label>
    <pluralLabel>Fitur QA</pluralLabel>
</CustomObject>