force-app/main/default/objects/Fitur_QA__mdt/fields/Hidden_Fields__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Fields__c</fullName>
    <label>Hidden Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>