force-app/main/default/objects/Fitur_QA__mdt/fields/Is_Agent_Leader_View__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_Leader_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agent Leader View</label>
    <type>Checkbox</type>
</CustomField>