force-app/main/default/objects/Fitur_QA__mdt/fields/QA_Master_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>QA_Master_Record_Type__c</fullName>
    <label>QA Master Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>